--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.2
-
+  swipeable_button_view: ^0.0.2
 
 dev_dependencies:
   flutter_test:
