--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.2
   swipeable_button_view: ^0.0.2
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
