--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   fluttertoast: ^8.2.2
   swipeable_button_view: ^0.0.2
   lottie: ^2.6.0
+  google_maps_flutter: ^2.1.0
+  http: ^1.1.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
