--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps_flutter: ^2.1.0
   http: ^1.1.0
   uuid: ^4.0.0
+  geocoding: ^2.1.0
+  google_places_flutter: ^2.0.6
 
 dev_dependencies:
   flutter_test:
