--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   uuid: ^4.0.0
   geocoding: ^2.1.0
   google_places_flutter: ^2.0.6
+  dio: ^4.0.0
+  flutter_bloc: ^8.1.3
+  rxdart: ^0.27.7
+  shared_preferences: ^2.2.1
+  firebase_messaging: ^14.6.8
+  firebase_core: ^2.16.0
 
 dev_dependencies:
   flutter_test:
