--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences: ^2.2.1
   firebase_messaging: ^14.6.8
   firebase_core: ^2.16.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
