--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   firebase_messaging: ^14.6.8
   firebase_core: ^2.16.0
   shimmer: ^3.0.0
+  easy_debounce: ^2.0.3
+  permission_handler: ^11.0.0
+  image_picker: ^1.0.4
+  syncfusion_flutter_datepicker: ^23.1.39
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +68,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
