--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   syncfusion_flutter_datepicker: ^23.1.39
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  flutter_stripe: ^9.5.0+1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +88,7 @@ flutter:
   assets:
     - assets/images/
     - assets/
+    - assets/.env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
