--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_stripe: ^9.5.0+1
   flutter_dotenv: ^5.1.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
